# Samsung-Test-C-Model-1

./: CMakeLists.txt  CMakeUserPresets.json  Classification.cpp  EmbeddingLoader.cpp  Main.cpp  Preprocessing.cpp  README.md  Utilities.cpp  config.h  vcpkg.json
Python/Data/: dataset_sms_spam_v1 (adjusted).csv  dataset_sms_spam_v1.csv  key_norm.csv  stopwordbahasa.csv
Python/Model/: fdeep_model.json  tuned_keras.keras
Python/Source/: Classification.py  Constants.py  Main.py  Preprocessing.py  Stemming.py  Utilities.py
